{
    "name": "ControlScheme",
    "maps": [
        {
            "name": "PlayerDefault",
            "id": "367c3de2-ebd3-4a9c-8368-63ff62a0582a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "b7cb41a3-a531-474b-b923-f1c39d77a496",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cast",
                    "type": "Button",
                    "id": "675ed597-16c3-4db5-8d3f-17e0dbb28a7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Summon",
                    "type": "Button",
                    "id": "73cc0ef1-bad0-4e09-907d-9f73a7c074aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchMagicMode",
                    "type": "Button",
                    "id": "6d21ec47-28e6-4dbb-83e1-5c74e6382adc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar1",
                    "type": "Button",
                    "id": "88e68661-ecb8-4d28-a108-5a3452882a19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar2",
                    "type": "Button",
                    "id": "50c1aede-e6d7-4a92-86eb-3e77c0d471db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar3",
                    "type": "Button",
                    "id": "a2f2f24b-6a2b-4ea4-bac4-4f1acc3a0dfd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar4",
                    "type": "Button",
                    "id": "293b346d-bdd5-4ee2-b845-6f09310ff457",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar5",
                    "type": "Button",
                    "id": "a00e5810-f029-4268-af81-d192d29f9535",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar6",
                    "type": "Button",
                    "id": "9293d9fb-50f4-44a4-8fa6-7a9f7d2205c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar7",
                    "type": "Button",
                    "id": "cbe7c482-3102-4357-a83b-9615b8b67fea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar8",
                    "type": "Button",
                    "id": "2bb0972f-5027-4eca-995c-ddf64ec9137c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar9",
                    "type": "Button",
                    "id": "11bbf251-9a98-4afd-aa0d-e2bf56e656cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hotbar0",
                    "type": "Button",
                    "id": "8b1f6193-83c1-44d9-9bf4-8c0ed54d8618",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "330e3230-eb9f-424b-8de2-dd20fd3d7832",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FlipSpawner",
                    "type": "Button",
                    "id": "094ec46e-b694-4586-a8e9-568f6dd21a0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "BasicMovement",
                    "id": "8903b530-7463-42de-b7f5-2ca24e2ee121",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5b87da94-86ac-4a52-aab0-a02fbedd9386",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8316d142-38ab-4ed3-aa87-f88aef406128",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cbc8067-980e-43b6-95aa-141292b9372d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b778293b-7420-4862-8a5f-66b7219dae5e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0b6e1208-74c5-460c-b556-5be406e597b1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Cast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01f95a50-a424-43aa-9565-0ef446cf22da",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMagicMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b03476b5-746d-4643-ab15-f3703968eafd",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb50b802-cfe4-435f-9354-f84d5cad7465",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b9db222-06b2-4ce7-b3b5-0f0393823793",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8af9e7d8-740f-49a2-96f2-19ad34b4b2cf",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f161bd9-5217-4dfc-8eee-e6f4018a8d7a",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb1e620a-fd98-4ddd-94ce-78c91131515f",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ca2c4e4-0158-4838-93cd-9cc6e6e6a415",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d2b419b-f01e-4b4f-ace4-8c944cd1b80e",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c3a5b1e-25e5-419b-86ce-b3ae2a0b5942",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82f50221-961f-4cb6-b254-5118e98f7be0",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60e32346-d9ec-4c86-b67a-5259775da7d5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d2699ea-d4ab-4af0-8faf-9150d3895038",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Summon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bbf5400-f3e4-456e-b552-adde26415cb3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlipSpawner",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}